Added support for use of "file:" scheme in SDP URLs.